--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <div>
 <a href="https://www.wpkube.com/html5-cheat-sheet/">
 <img 
- src="hao_hao.jpg"
- alt="The Ultimate HTML 5 Cheat Sheet [Infographic]" width="30%" border="0" /></a></p>
+ src="hao_hao.jpg" width="30%"
+ alt="The Ultimate HTML 5 Cheat Sheet [Infographic]" border="1" /></a></p>
 </div>
 <h2><em> Chào </em> Thế Giới!</h2>
 <a href="http://fb.com/loveyou4365"><strong></strong> link</a>
