--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" rel="nofollow noopener" role="link" tabindex="0" target="_blank">https://www.google.com</a>
+<div>
+<a href="https://www.wpkube.com/html5-cheat-sheet/">
+<img 
+ src="hao_hao.jpg"
+ alt="The Ultimate HTML 5 Cheat Sheet [Infographic]" width="30%" border="1px" /></a></p>
+ 
 </div>
 <h2><em> Chào </em> Thế Giới!</h2>
 <nav>
@@ -14,8 +20,6 @@
 <a href="https://cdn.fbsbx.com/v/t59.2708-21/271494678_646762873331722_1785181645257254500_n.java/VehicleList.java?_nc_cat=102&ccb=1-5&_nc_sid=0cab14&_nc_ohc=QxheuINXxVIAX8NJTyM&_nc_ht=cdn.fbsbx.com&oh=03_AVJEs2Ul8URnqOM4p_QQ-yuqF4dcTWMM0_dKKhX89-fvnA&oe=61EAE81C&dl=1"><strong title="Cẩn thận trước khi click vào"> code lab1</strong></a>
 
 </nav>
-
-
 
 </body>
 </html>
