--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href="http://fb.com/loveyou4365"><strong></strong> link</a>
 <a href="https://drive.google.com/drive/folders/115jZdLZPYZEUMN7NdxKibYZu5eP2StHD"><strong></strong> code csd</a>
 <a href="https://cdn.fbsbx.com/v/t59.2708-21/271494678_646762873331722_1785181645257254500_n.java/VehicleList.java?_nc_cat=102&ccb=1-5&_nc_sid=0cab14&_nc_ohc=QxheuINXxVIAX8NJTyM&_nc_ht=cdn.fbsbx.com&oh=03_AVJEs2Ul8URnqOM4p_QQ-yuqF4dcTWMM0_dKKhX89-fvnA&oe=61EAE81C&dl=1"><strong title="Cẩn thận trước khi click vào"> code lab1</strong></a>
-
+<a href="test_1.html"> ảo thuật</a>
 </nav>
 
 </body>
