--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang = "vn">
 <head>
 <meta charset = "UTF-8">
+<link rel="icon" href="http://example.com/favicon.png">
+<link rel="stylesheet" type="text/css" href="index.css">
 <title>My First Page</title>
 </head>
 <body>
@@ -15,11 +17,16 @@
 </div>
 <h2><em> Chào </em> Thế Giới!</h2>
 <nav>
-<a href="http://fb.com/loveyou4365"><strong></strong> link</a>
-<a href="https://drive.google.com/drive/folders/115jZdLZPYZEUMN7NdxKibYZu5eP2StHD"><strong></strong> code csd</a>
-<a href="https://cdn.fbsbx.com/v/t59.2708-21/271494678_646762873331722_1785181645257254500_n.java/VehicleList.java?_nc_cat=102&ccb=1-5&_nc_sid=0cab14&_nc_ohc=QxheuINXxVIAX8NJTyM&_nc_ht=cdn.fbsbx.com&oh=03_AVJEs2Ul8URnqOM4p_QQ-yuqF4dcTWMM0_dKKhX89-fvnA&oe=61EAE81C&dl=1"><strong title="Cẩn thận trước khi click vào"> code lab1</strong></a>
-<a href="test_1.html"> ảo thuật</a>
+<a class="link-to" href="http://fb.com/loveyou4365" target="_blank"><strong></strong> link</a>
+<a class="link-to" href="https://drive.google.com/drive/folders/115jZdLZPYZEUMN7NdxKibYZu5eP2StHD"><strong></strong> code csd</a>
+<a class="link-to" href="https://cdn.fbsbx.com/v/t59.2708-21/271494678_646762873331722_1785181645257254500_n.java/VehicleList.java?_nc_cat=102&ccb=1-5&_nc_sid=0cab14&_nc_ohc=QxheuINXxVIAX8NJTyM&_nc_ht=cdn.fbsbx.com&oh=03_AVJEs2Ul8URnqOM4p_QQ-yuqF4dcTWMM0_dKKhX89-fvnA&oe=61EAE81C&dl=1"><strong title="Cẩn thận trước khi click vào"> code lab1</strong></a>
+<a class="link-to" href="test_1.html"> ảo thuật</a>
+<br/>
+<a class="app-balsamiq" href="https://download.com.vn/download/balsamiq-mockups-90400">Balsamiq Mockups</a>
 </nav>
-
+<video width="70%" height="70%" controls>
+    <source src="https://s62.upstreamcdn.co/hls/w47rzjow7zbnx2nro2ykuqnibwepkjs5ckj5kcf2ajramb4dpbpbggwsbtya/index-v1-a1.m3u8" type="" >
+</video>
+<!-- <iframe width="813" height="457" src="https://www.youtube.com/embed/axGef2W_jOg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
 </body>
 </html>
