--- a/index.html
+++ b/index.html
@@ -1,32 +1,44 @@
 <!DOCTYPE html>
-<html lang = "vn">
+<html>
 <head>
-<meta charset = "UTF-8">
-<link rel="icon" href="http://example.com/favicon.png">
-<link rel="stylesheet" type="text/css" href="index.css">
-<title>My First Page</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Mcgame Website</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" rel="nofollow noopener" role="link" tabindex="0" target="_blank">https://www.google.com</a>
-<div>
-<a href="https://www.wpkube.com/html5-cheat-sheet/">
-<img 
- src="hao_hao.jpg"
- alt="The Ultimate HTML 5 Cheat Sheet [Infographic]" width="30%" border="1px" /></a></p>
- 
-</div>
-<h2><em> Chào </em> Thế Giới!</h2>
-<nav>
-<a class="link-to" href="http://fb.com/loveyou4365" target="_blank"><strong></strong> link</a>
-<a class="link-to" href="https://drive.google.com/drive/folders/115jZdLZPYZEUMN7NdxKibYZu5eP2StHD"><strong></strong> code csd</a>
-<a class="link-to" href="https://cdn.fbsbx.com/v/t59.2708-21/271494678_646762873331722_1785181645257254500_n.java/VehicleList.java?_nc_cat=102&ccb=1-5&_nc_sid=0cab14&_nc_ohc=QxheuINXxVIAX8NJTyM&_nc_ht=cdn.fbsbx.com&oh=03_AVJEs2Ul8URnqOM4p_QQ-yuqF4dcTWMM0_dKKhX89-fvnA&oe=61EAE81C&dl=1"><strong title="Cẩn thận trước khi click vào"> code lab1</strong></a>
-<a class="link-to" href="test_1.html"> ảo thuật</a>
-<br/>
-<a class="app-balsamiq" href="https://download.com.vn/download/balsamiq-mockups-90400">Balsamiq Mockups</a>
-</nav>
-<video width="70%" height="70%" controls>
-    <source src="https://s62.upstreamcdn.co/hls/w47rzjow7zbnx2nro2ykuqnibwepkjs5ckj5kcf2ajramb4dpbpbggwsbtya/index-v1-a1.m3u8" type="" >
-</video>
-<!-- <iframe width="813" height="457" src="https://www.youtube.com/embed/axGef2W_jOg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+	<div class="nav">
+		<nav>
+			<a href="index.html"><li>Link 1</li></a>
+			<a href="index.html"><li>Link 2</li></a>
+			<a href="index.html"><li>Link 3</li></a>
+			<a href="index.html"><li>Link 4</li></a>
+		</nav>
+	</div>
+	<div>
+		<div class="btn">
+			<div class="circle"></div>  
+			<div class="circle"></div>  
+			<div class="circle"></div>  
+		</div>
+		
+		<aside class="left">
+			<img class="ppic" src="https://scontent.fsgn5-1.fna.fbcdn.net/v/t39.30808-6/217826707_1512115312463837_1674999001345034845_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=oBp0D6oPjJcAX8wPzP_&_nc_ht=scontent.fsgn5-1.fna&oh=00_AT8GZ4ag4iasf1UzpYQtTnCqSkrXyYnBB9j7m_h6bqsmGg&oe=61F810C4" />
+			<ul>
+				<a class="link-to" href="http://fb.com/loveyou4365" target="_blank"> 
+					<div class="squ"></div><li>link</li>
+				</a>
+<a class="link-to" href="https://drive.google.com/drive/folders/115jZdLZPYZEUMN7NdxKibYZu5eP2StHD">
+	<div class="squ"></div><li>code csd</li>
+</a>
+<a class="link-to" href="https://cdn.fbsbx.com/v/t59.2708-21/271494678_646762873331722_1785181645257254500_n.java/VehicleList.java?_nc_cat=102&ccb=1-5&_nc_sid=0cab14&_nc_ohc=QxheuINXxVIAX8NJTyM&_nc_ht=cdn.fbsbx.com&oh=03_AVJEs2Ul8URnqOM4p_QQ-yuqF4dcTWMM0_dKKhX89-fvnA&oe=61EAE81C&dl=1">
+	<div class="squ"></div><li>code lab1</li>
+</a>
+<a class="link-to hao_han" href="">
+	<div class="squ"></div><li>ảo thuật</li>
+</a>
+			</ul>
+		</aside>   
+	</div>   
 </body>
-</html>
+</html> 
