--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 		
 		<aside class="left">
-			<img class="ppic" src="https://scontent.fsgn5-1.fna.fbcdn.net/v/t39.30808-6/217826707_1512115312463837_1674999001345034845_n.jpg?_nc_cat=101&ccb=1-5&_nc_sid=09cbfe&_nc_ohc=oBp0D6oPjJcAX8wPzP_&_nc_ht=scontent.fsgn5-1.fna&oh=00_AT8GZ4ag4iasf1UzpYQtTnCqSkrXyYnBB9j7m_h6bqsmGg&oe=61F810C4" />
+			<img class="ppic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Hummingbird.jpg/800px-Hummingbird.jpg?20051004190252" />
 			<ul>
 				<a class="link-to" href="http://fb.com/loveyou4365" target="_blank"> 
 					<div class="squ"></div><li>link</li>
