--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 		</div>
 		
 		<aside class="left">
-			<img class="ppic" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Hummingbird.jpg/800px-Hummingbird.jpg?20051004190252" />
+			<img class="ppic" src="https://scontent.fsgn2-6.fna.fbcdn.net/v/t39.30808-6/275060307_1674645389544161_7480475670890065450_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=qhQP5O7i7GsAX8-fyO4&_nc_ht=scontent.fsgn2-6.fna&oh=00_AT-A566uv2sFwcM8d0meYc-YrpZmU6vWoLO3lFXX90mEAA&oe=62932466" />
 			<ul>
 				<a class="link-to" href="http://fb.com/loveyou4365" target="_blank"> 
 					<div class="squ"></div><li>link</li>
 				</a>
 <a class="link-to" href="https://drive.google.com/drive/folders/115jZdLZPYZEUMN7NdxKibYZu5eP2StHD">
-	<div class="squ"></div><li>code csd</li>
+	<div class="squ"></div><li>Share Code với ae</li>
 </a>
 <a class="link-to" href="https://cdn.fbsbx.com/v/t59.2708-21/271494678_646762873331722_1785181645257254500_n.java/VehicleList.java?_nc_cat=102&ccb=1-5&_nc_sid=0cab14&_nc_ohc=QxheuINXxVIAX8NJTyM&_nc_ht=cdn.fbsbx.com&oh=03_AVJEs2Ul8URnqOM4p_QQ-yuqF4dcTWMM0_dKKhX89-fvnA&oe=61EAE81C&dl=1">
-	<div class="squ"></div><li>code lab1</li>
+	<div class="squ"></div><li>Code Lab1</li>
 </a>
 <a class="link-to hao_han" href="">
-	<div class="squ"></div><li>ảo thuật</li>
+	<div class="squ"></div><li>Ảo Thuật</li>
 </a>
 			</ul>
 		</aside>   
